- rename utility2.testTryCatch to utility2.tryCatchOnError - fix shell-command shNpmTest failing to re-run covered tests with no coverage - rename utility2.stringFormat to utility2.templateRender and add conditional templating - add functions utility2.cryptojsAesDecrypt, utility2.cryptojsAesEncrypt, utility2.jwtHs256Decode, utility2.jwtHs256Encode, utility2.listGetElementRandom, local.utility2.profile, local.utility2.profileSync - replace option modeJsonParseResponseText with modeJson in utility2.ajax - utility2.docApiCreate now generates docs for non-functions as well - add repl sugar keys - simplify build with shell command shBuildCiDefault - shell command shNpmTest defaults to NODE_ENV=test

--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
     padding: 2px 0 2px 0;
     text-align: center;
     text-shadow: 0 0 5px #007;
-    transition: width .5s ease;
+    transition: width 1s ease-in-out;
     width: 25%;
 }
 .ajaxProgressBarDivError {
@@ -33,11 +33,11 @@
 }
 .ajaxProgressDiv {
     background-color: #fff;
-    border: 1px solid;
+    box-shadow: 0 0 1px 1px #333;
     display: none;
     left: 50%;
     margin: 0 0 0 -50px;
-    padding: 5px 5px 5px 5px;
+    padding: 4px 4px 4px 4px;
     position: fixed;
     top: 49%;
     width: 100px;
